# RESSA

./: .env  .esp.bench.log.swp  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  app.js  bencher.js  benchmark.md  code_of_conduct.md  codecov.yml  expected.out  left.out  license.txt  new_benches.md  old_benches.md  package-lock.json  package.json  place.mjs  right.out  run_moz_central_test.sh  run_test262.ps1  run_test262.sh  test.js  test.mjs
.cargo/: config
.github/workflows/: rust.yml
benches/: main.rs  major_libs.rs  major_libs_spanned.rs
crates/in_and_out_logger/: Cargo.toml  out.rs
crates/in_and_out_logger/examples/: basic.rs
crates/in_and_out_logger/src/: lib.rs
examples/: angular.rs  future_work.rs  js_to_json-esprima.rs  js_to_json.rs  js_to_ron.rs  simple.js  simple.mjs  simple.rs  simple_builder.rs  simple_module.rs  test262.rs
scripts/: run_moz_central_test.sh
src/: comment_handler.rs  error.rs  formal_params.rs  globals.rs  lexical_names.rs  lhs.rs  lib.rs  node.rs  primary_expression.rs  regex.rs  rusprima.rs
src/spanned/: mod.rs
tests/: everything_js.rs  libs_common.rs  major_libs.rs  script_snippets.rs  snippets.rs  spider_monkey.rs
tests/all/: comment_handler.rs  ecma262.rs  es_tokens.rs  main.rs  major_libs.rs  script_snippets.rs  snippets.rs  spider_monkey.rs
tests/all/snapshots/: all__ecma262__es2015_module-10.snap  all__ecma262__es2015_module-2.snap  all__ecma262__es2015_module-3.snap  all__ecma262__es2015_module-4.snap  all__ecma262__es2015_module-5.snap  all__ecma262__es2015_module-6.snap  all__ecma262__es2015_module-7.snap  all__ecma262__es2015_module-8.snap  all__ecma262__es2015_module-9.snap  all__ecma262__es2015_module.snap  all__ecma262__es2015_script.snap  all__ecma262__es5.snap
tests/snapshots/: ecma262__es2015_module-10.snap  ecma262__es2015_module-2.snap  ecma262__es2015_module-3.snap  ecma262__es2015_module-4.snap  ecma262__es2015_module-5.snap  ecma262__es2015_module-6.snap  ecma262__es2015_module-7.snap  ecma262__es2015_module-8.snap  ecma262__es2015_module-9.snap  ecma262__es2015_module.snap  ecma262__es2015_script.snap  ecma262__es5.snap  everything_js__es2015_module-10.snap  everything_js__es2015_module-2.snap  everything_js__es2015_module-3.snap  everything_js__es2015_module-4.snap  everything_js__es2015_module-5.snap  everything_js__es2015_module-6.snap  everything_js__es2015_module-7.snap  everything_js__es2015_module-8.snap  everything_js__es2015_module-9.snap  everything_js__es2015_module.snap  everything_js__es2015_script.snap  everything_js__es5.snap
tests/test262/: addLineNumbers.js  main.rs  removeNegative.js  style.css
