[package]
name = "ressa"
version = "0.8.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
repository = "https://github.com/rusty-ecma/RESSA"
description = "An ECMAscript parser"
license = "MIT"
readme = "./README.md"
keywords = ["JavaScript", "parsing", "JS", "ES", "ECMA"]
categories = ["parsing", "text-processing", "web-programming"]
edition = "2021"

[dependencies]
hash-chain = "0.3"
log = "0.4"
ress = "0.11"
resast = "0.5"
res-regex = "0.1"
tracing = "0.1"

[features]
default = []
# This feature populates a field on the Parser `_look_ahead` that will contain a debug format
# string of the look_ahead token. Very helpful when debugging this crate with gdb/lldb as sometimes
# the property shape of the `Token` isn't formatted well
debug_look_ahead = []
# This feature disables the moz_central tests by default as they tend to run long on most
# development machines and require a larger minimum stack size to pass
moz_central = []

[dev-dependencies]
criterion = "0.4"
docopt = "1"
env_logger = "0.9"
insta = "1.19"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
term-painter = "0.3"
walkdir = "2"

[[bench]]
name = "major_libs"
harness = false

[[example]]
name = "js-to-json"
path = "examples/js_to_json.rs"
required-features = ["resast/serialization"]

[[example]]
name = "js-to-json-esprima"
path = "examples/js_to_json-esprima.rs"
required-features = ["resast/esprima"]
